Created MotionEndedTask which fires only once 500ms after motion stops
Also added a “USE_CAMERA” bool to work around camera issues for now.

--- a/MotionCamera/src/main/res/layout/activity_main.xml
+++ b/MotionCamera/src/main/res/layout/activity_main.xml
@@ -11,8 +11,10 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/textField"
-        android:text="@string/hello_world"
+        android:id="@+id/shotCounter"
+        android:text="0"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="96sp"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
